test/FAIL/dispcmd/invalid_arguments/03_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid argument"
#-------

disp reggggggggg